update swag ++ change password
