# docs/swagger.json
@@ -245,6 +245,38 @@
                 }
             }
         },
+        "/api/auth/password": {
+            "put": {
+                "description": "Takes old password and newpassword and chnge password",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Change Password",
+                "responses": {
+                    "200": {
+                        "description": "password Info",
+                        "schema": {
+                            "$ref": "#/definitions/http.Response-auth_ChangePasswordInput"
+                        }
+                    },
+                    "400": {
+                        "description": "Client error",
+                        "schema": {
+                            "$ref": "#/definitions/http.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/http.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/auth/signin": {
             "post": {
                 "description": "Login account",
@@ -324,6 +356,12 @@
                     },
                     "400": {
                         "description": "Incorrect Input",
+                        "schema": {
+                            "$ref": "#/definitions/http.ResponseError"
+                        }
+                    },
+                    "409": {
+                        "description": "User already exists",
                         "schema": {
                             "$ref": "#/definitions/http.ResponseError"
                         }
@@ -1252,6 +1290,20 @@
         }
     },
     "definitions": {
+        "auth.ChangePasswordInput": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "new_password": {
+                    "type": "string"
+                },
+                "old_password": {
+                    "type": "string"
+                }
+            }
+        },
         "auth.LoginInput": {
             "type": "object",
             "properties": {
@@ -1289,6 +1341,7 @@
             "type": "object",
             "properties": {
                 "name": {
+                    "description": "Image       int       `json:\"image_id\"`",
                     "type": "string"
                 },
                 "parent_id": {
@@ -1389,6 +1442,17 @@
                     "items": {
                         "$ref": "#/definitions/models.Category"
                     }
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "http.Response-auth_ChangePasswordInput": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "$ref": "#/definitions/auth.ChangePasswordInput"
                 },
                 "status": {
                     "type": "integer"
@@ -1710,6 +1774,7 @@
                     "type": "string"
                 },
                 "name": {
+                    "description": "Image       int       `json:\"image_id\" valid:\"-\"`",
                     "type": "string"
                 },
                 "parent_id": {
